--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
     <p>The Database of Experimental Biomaterials and their Biological Effect
-        (DEBBIE) is a new open access tool which will enable a more efficient
+        (DEBBIE) is a new open access tool enabling a more efficient
         and evidence-based selection of materials for medical applications. The
-        database aims to curate exhaustive inventories of biomaterials and their
-        associated data using text mining tools. It can be used to recreate or
+        database aims to extract exhaustive inventories of biomaterials and their
+        associated data using text mining tools from text docuemnts. It can be used to recreate or
         update reviews of the literature in a more rapid and repeatable manner
         as well as generate a comprehensive map of research activity and findings.
     </p>
