--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
     <p>The Database of Experimental Biomaterials and their Biological Effect
         (DEBBIE) is a new open access tool enabling a more efficient
         and evidence-based selection of materials for medical applications. The
-        database aims to extract exhaustive inventories of biomaterials and their
-        associated data using text mining tools from text docuemnts. It can be used to recreate or
-        update reviews of the literature in a more rapid and repeatable manner
-        as well as generate a comprehensive map of research activity and findings.
+        database retrieves relevant scientific abstracts and extracts information about biomaterials and their
+        associated data using a novel automated text mining pipeline. It can be used to access and organize information in the biomaterials literature in a more rapid and repeatable manner
+        and generates a comprehensive map of research activity and findings.
     </p>
     <br>
     <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="650" height="300"></center>
