--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials, 
     their design, manufacture and biological testing. It was developed using text analysis for identifying 
     ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon. 
-    Topics covered by DEB were validated by members of the biomaterials research community. The ontology may be used 
+    Topics covered by DEB were validated by members of the biomaterials research community. DEB may be used 
     for searching terms, performing annotations for machine learning applications, standardized meta-data indexing 
     and other cross-disciplinary data exploitation. 
-    If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag terms and errors through 
+    If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag new terms, definitions and errors through 
     the 'issues' tab in <a href="https://github.com/ProjectDebbie/Ontology_DEB"> DEB's GitHub repository</a>.                                                                                        
         <br>
         <br>
@@ -93,12 +93,10 @@
   <div class="w3-container w3-padding-16" id="database">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h2>
     <p>The Database of Experimental Biomaterials and their Biological Effect
-        (DEBBIE) is a new open access tool which will enable a more efficient
+        (DEBBIE) enables a more efficient
         and evidence-based selection of materials for medical applications. The
         database aims to curate exhaustive inventories of biomaterials and their
-        associated data using text mining tools. It can be used to recreate or
-        update reviews of the literature in a more rapid and repeatable manner
-        as well as generate a comprehensive map of research activity and findings.
+        associated data through automated data retrieval, classification and text annotations.
     </p>
       <p>The DEBBIE Database contains annotations of PubMed abstracts in field of biomaterials, including implants, medical devices, and exeprimental scaffolds. Each annotation is labelled by one or more of the following categories:</p>
       <!-- list of superclasses -->
