--- a/index.html
+++ b/index.html
@@ -92,13 +92,10 @@
     <!-- Database Section -->
   <div class="w3-container w3-padding-16" id="database">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h2>
-    <p>The Database of Experimental Biomaterials and their Biological Effect
-        (DEBBIE) enables a more efficient
-        and evidence-based selection of materials for medical applications. The
-        database aims to curate exhaustive inventories of biomaterials and their
-        associated data through automated data retrieval, classification and text annotations.
+    <p>
+      An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.  
+      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel data model which includes multiple lexical resources, and the annotations stored in DEBBIE, which is a MongoDB implementations. Each annotation is labelled by one or more of the following categories:                                                             
     </p>
-      <p>The DEBBIE Database contains annotations of PubMed abstracts in field of biomaterials, including implants, medical devices, and exeprimental scaffolds. Each annotation is labelled by one or more of the following categories:</p>
       <!-- list of superclasses -->
       <ul class="list" style="padding-left: 150px;">
       <!--row 1 -->
@@ -122,7 +119,10 @@
         <li>Biologically Active Substance</li>
         <li>Research Technique</li>
       </ul>
-    <br>
+    <p>
+    Users can access the information through a simple and highly institutive keyword search through the following link:                                                
+    </p>                                              
+  <br>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
   text-align: center;"><a href="http://debbie.bsc.es/search/">DEBBIE Database</a></button></center>
   </div>
