--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h2>
     <p>
       An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.  
-      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel data model which includes multiple lexical resources, and the annotations stored in DEBBIE, which is a MongoDB implementations. Each annotation is labelled by one or more of the following categories:                                                             
+      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel data model which includes multiple lexical resources. The annotations stored in DEBBIE, a NoSQL database, and each annotation is labelled by one or more of the following categories:                                                             
     </p>
       <!-- list of superclasses -->
       <ul class="list" style="padding-left: 150px;">
@@ -120,7 +120,7 @@
         <li>Research Technique</li>
       </ul>
     <p>
-    Users can access the information through a simple and highly institutive keyword search through the following link:                                                
+    Users can access the information with a simple and highly institutive keyword search through the following link:                                                
     </p>                                              
   <br>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
