updated text and links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide w3-center" style="max-width:1245px; min-width:1245px;" id="home">
   <img class="w3-image w3-center" style="border-radius: 25px;" src="images/Debbie_long.png" alt="Debbie_img">
-</header>  	
+</header>
 
 <!-- Page content max-width:1564px -->
 <div class="w3-content w3-padding w3-white" style="max-width:1300px; min-width: 1300px;">
@@ -46,12 +46,8 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
-    <p>The Database of Experimental Biomaterials and their Biological Effect
-        (DEBBIE) is a new open access tool enabling a more efficient
-        and evidence-based selection of materials for medical applications. The
-        database retrieves relevant scientific abstracts and extracts information about biomaterials and their
-        associated data using a novel automated text mining pipeline. It can be used to access and organize information in the biomaterials literature in a more rapid and repeatable manner
-        and generates a comprehensive map of research activity and findings.
+    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database automatically curated from the scientific literature. DEBBIE was designed to facilitate a more efficient access to the large literature in the field, generate a comprehensive map of research activity and findings, and enable evidence-based selection of materials for medical applications.
+Beyond the creation of the database, the project is dedicated to the creation, adaptation and optimization of text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation pipeline (see illustration below), are openly available for download and use through the project’s <a href "https://github.com/ProjectDebbie"> git hub repositories </a>.
     </p>
     <br>
     <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="650" height="300"></center>
@@ -60,15 +56,15 @@
    <!-- Ontology Section -->
   <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16"">Ontology</h2>
-    <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and 
-    Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials, 
-    their design, manufacture and biological testing. It was developed using text analysis for identifying 
-    ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon. 
-    Topics covered by DEB were validated by members of the biomaterials research community. DEB may be used 
-    for searching terms, performing annotations for machine learning applications, standardized meta-data indexing 
-    and other cross-disciplinary data exploitation. 
-    If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag new terms, definitions and errors through 
-    the 'issues' tab in <a href="https://github.com/ProjectDebbie/Ontology_DEB"> DEB's GitHub repository</a>.                                                                                        
+    <p> <a href="https://bioportal.bioontology.org/ontologies/DEB">The Devices, Experimental scaffolds and
+    Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials,
+    their design, manufacture and biological testing. It was developed using text analysis for identifying
+    ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon.
+    Topics covered by DEB were validated by members of the biomaterials research community. DEB may be used
+    for searching terms, performing annotations for machine learning applications, standardized meta-data indexing
+    and other cross-disciplinary data exploitation.
+    If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag new terms, definitions and errors through
+    the 'issues' tab in <a href="https://github.com/ProjectDebbie/Ontology_DEB"> DEB's GitHub repository</a>.
         <br>
         <br>
         <p>In addition, below you can find the static and dynamic visualization of the ontology.</p>
@@ -93,8 +89,8 @@
   <div class="w3-container w3-padding-16" id="database">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h2>
     <p>
-      An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.  
-      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model <\a> which includes multiple lexical resources. The annotations stored in DEBBIE, a NoSQL database, and each annotation is labelled by one or more of the following categories:                                                             
+      An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.
+      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model </a> which includes multiple lexical resources. The annotations stored in DEBBIE, a NoSQL database, and each annotation is labelled by one or more of the following categories:
     </p>
       <!-- list of superclasses -->
       <ul class="list" style="padding-left: 150px;">
@@ -120,15 +116,15 @@
         <li>Research Technique</li>
       </ul>
     <p>
-    Users can access the information with a simple and highly institutive keyword search through the following link:                                                
-    </p>                                              
+    Users can access the information with a simple and highly institutive keyword search through the following link:
+    </p>
   <br>
     <center><button style="background-color:#3995F9;font-size:20px;color:white; padding: 10px 32px;
   text-align: center;"><a href="http://debbie.bsc.es/search/">DEBBIE Database</a></button></center>
   </div>
   <br>
   <br>
- 
+
 <!-- Research Section -->
 <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="research">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Research</h2>
@@ -142,7 +138,7 @@
         <a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910"><img src="images/TOC_20200209.png" alt="osnat_medium_article1" style="width:90%"></a>
         <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data</a></p>
         <p class="w3-opacity">Advanced Functional Materials, February 2020</p>
-      </div>                         
+      </div>
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
