--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
     Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials,
     their design, manufacture and biological testing. It was developed using text analysis for identifying
     ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon.
-    Topics covered by DEB were validated by members of the biomaterials research community. DEB may be used
+    Topics covered by DEB were validated by members of the biomaterials research community. 
+    </p> 
+    <p>DEB may be used
     for searching terms, performing annotations for machine learning applications, standardized meta-data indexing
     and other cross-disciplinary data exploitation.
     If you are a biomaterials scientist, we encourage and welcome your input to this effort! You can flag new terms, definitions and errors through
