--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
-    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database automatically curated from the scientific literature. DEBBIE was designed to facilitate a more efficient access to the large literature in the field, generate a comprehensive map of research activity and findings, and enable evidence-based selection of materials for medical applications.
-    </p>       
-    <p>Beyond the creation of the database, the project is dedicated to the creation, adaptation and optimization of text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation pipeline (see illustration below), are openly available for download and use through the project’s <a href "https://github.com/ProjectDebbie"> git hub repositories </a>.
+    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database of biomaterials, implants and medical devices automatically curated from the scientific literature. DEBBIE was designed to facilitate a more efficient access to the large literature in the field, generate a comprehensive map of research activity and findings, and enable evidence-based selection of materials for medical applications.
+    </p>
+    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation pipeline (see illustration below), are openly available for download and use through the project’s <a href "https://github.com/ProjectDebbie"> GitHub repositories</a>.
     </p>
     <br>
     <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="650" height="300"></center>
@@ -61,8 +61,8 @@
     Biomaterials Ontology (DEB)</a> is an open resource for organizing information about biomaterials,
     their design, manufacture and biological testing. It was developed using text analysis for identifying
     ontology terms from a biomaterials gold standard corpus, systematically curated to represent the domain’s lexicon.
-    Topics covered by DEB were validated by members of the biomaterials research community. 
-    </p> 
+    Topics covered by DEB were validated by members of the biomaterials research community.
+    </p>
     <p>DEB may be used
     for searching terms, performing annotations for machine learning applications, standardized meta-data indexing
     and other cross-disciplinary data exploitation.
@@ -94,7 +94,7 @@
     <p>
       An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.
     </p>
-    <p>                                                               
+    <p>
       The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model </a> which includes multiple lexical resources. The annotations stored in DEBBIE, a NoSQL database, and each annotation is labelled by one or more of the following categories:
     </p>
       <!-- list of superclasses -->
