--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
     <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database of biomaterials, implants and medical devices automatically curated from the scientific literature. DEBBIE was designed to facilitate a more efficient access to the large literature in the field, generate a comprehensive map of research activity and findings, and enable evidence-based selection of materials for medical applications.
     </p>
-    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation pipeline (see illustration below), are openly available for download and use through the project’s <a href "https://github.com/ProjectDebbie"> GitHub repositories</a>.
+    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation pipeline (see illustration below), are openly available for download and use through the project’s <a href "https://github.com/ProjectDebbie?tab=repositories"> GitHub repositories</a>.
     </p>
     <br>
     <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="650" height="300"></center>
