--- a/index.html
+++ b/index.html
@@ -99,10 +99,17 @@
   <div class="w3-container w3-padding-16" id="database">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database</h2>
     <p>
-      An experimental version of DEBBIE is now openly available for browsing. It is still under development, but we consider it a minimal viability product and are welcoming the feedback and comments of the research community.
+      An experimental version of DEBBIE is now openly available for browsing. It is still under development, 
+        but we consider it a minimal viability product and are welcoming the feedback and comments of the 
+                                                                   research community.
     </p>
     <p>
-      The current version of the database contains abstracts automatically retrieved from PubMed, which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. The abstracts were then annotated using our novel <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model </a> which includes multiple lexical resources. The annotations stored in DEBBIE, a NoSQL database, and each annotation is labelled by one or more of the following categories:
+      The current version of the database contains abstracts automatically retrieved from PubMed, 
+         which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. 
+           The abstracts were then annotated using our novel 
+         <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model </a> which includes multiple 
+         lexical resources. The annotations are finally stored in DEBBIE, a NoSQL database, and each annotation is 
+           labelled by one or more of the following categories:
     </p>
       <!-- list of superclasses -->
       <ul class="list" style="padding-left: 150px;">
