--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
          which were classified as ‘relevant’ to the areas of implants, medical devices, and experimental scaffolds. 
            The abstracts were then annotated using our novel 
          <a href="https://github.com/ProjectDebbie/Biomaterials_annotator"> data model </a> which includes multiple 
-         lexical resources. The annotations are finally stored in DEBBIE, a NoSQL database, and each annotation is 
+         lexical resources. The annotations are finally stored a NoSQL database, with each of the annotated concept 
            labelled by one or more of the following categories:
     </p>
       <!-- list of superclasses -->
