--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of 
             text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation 
             pipeline (see illustration below), are openly available for download and use through the 
-            project’s <a href "https://github.com/ProjectDebbie/DEBBIE_pipeline"> GitHub repositories</a>.
+            project’s <a href="https://github.com/ProjectDebbie/DEBBIE_pipeline"> GitHub repositories</a>.
     </p>
     <br>
     <center><img class="w3-image w3-center w3-padding-16" src="images/Biocuration_pipeline_20200123.png" alt="Pipeline" width="650" height="300"></center>
