--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         ul {
           flex-wrap: wrap;
           display: flex;
-          font-family: "ECSquareSansProRegular", Verdana, Geneva, sans-serif;
+          font-family: Tahoma, Geneva, sans-serif;
         }
         ul li {
           flex: 1 0 33%;
-          font-family: "ECSquareSansProRegular", Verdana, Geneva, sans-serif;
+          font-family: Tahoma, Geneva, sans-serif;
         }
         p {
-          font-family: "ECSquareSansProRegular", Verdana, Geneva, sans-serif;
+          font-family: Tahoma, Geneva, sans-serif;
         }
 
 </style>
@@ -29,6 +29,7 @@
       <a href="#about" class="w3-bar-item w3-button w3-padding-16">About</a>
       <a href="#ontology" class="w3-bar-item w3-button w3-padding-16">Ontology</a>
       <a href="#database" class="w3-bar-item w3-button w3-padding-16">Database</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-16">Documentation</a>
       <a href="#research" class="w3-bar-item w3-button w3-padding-16">Research</a>
       <a href="#team" class="w3-bar-item w3-button w3-padding-16">Team</a>
     </div>
