--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,13 @@
     <img src="images/flyer.png" width="60" height="60"></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right">
-      <a href="#about" class="w3-bar-item w3-button w3-padding-16">About</a>
-      <a href="#ontology" class="w3-bar-item w3-button w3-padding-16">Ontology</a>
-      <a href="#database" class="w3-bar-item w3-button w3-padding-16">Database</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-16">Documentation</a>
-      <a href="#research" class="w3-bar-item w3-button w3-padding-16">Research</a>
-      <a href="#team" class="w3-bar-item w3-button w3-padding-16">Team</a>
-      <a href="#contact" class="w3-bar-item w3-button w3-padding-16">Contact</a>
+      <a href="https://projectdebbie.github.io/#about" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">About</a>
+      <a href="https://projectdebbie.github.io/#ontology" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Ontology</a>
+      <a href="https://projectdebbie.github.io/#database" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Database</a>
+      <a href="#" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
+      <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research</a>
+      <a href="https://projectdebbie.github.io/#team" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Team</a>
+      <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contact</a>
     </div>
   </div>
 </div>
