--- a/documentation.html
+++ b/documentation.html
@@ -26,12 +26,13 @@
     <img src="images/flyer.png" width="60" height="60"></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right">
-      <a href="#about" class="w3-bar-item w3-button w3-padding-16">About</a>
-      <a href="#ontology" class="w3-bar-item w3-button w3-padding-16">Ontology</a>
-      <a href="#database" class="w3-bar-item w3-button w3-padding-16">Database</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-16">Documentation</a>
-      <a href="#research" class="w3-bar-item w3-button w3-padding-16">Research</a>
-      <a href="#team" class="w3-bar-item w3-button w3-padding-16">Team</a>
+      <a href="https://projectdebbie.github.io/#about" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">About</a>
+      <a href="https://projectdebbie.github.io/#ontology" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Ontology</a>
+      <a href="https://projectdebbie.github.io/#database" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Database</a>
+      <a href="https://projectdebbie.github.io/documentation.html" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
+      <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research</a>
+      <a href="https://projectdebbie.github.io/#team" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Team</a>
+      <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contact</a>
     </div>
   </div>
 </div>
@@ -43,15 +44,28 @@
 
 <!-- Page content max-width:1564px -->
 <div class="w3-content w3-padding w3-white" style="max-width:1300px; min-width: 1300px;">
+  <!-- Pipeline overview Section -->
+  <div class="w3-container w3-padding-16 w3-white" id="about" >
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE Pipeline Overview</h2>
+    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database of 
+            biomaterials, implants and medical devices automatically curated from the scientific literature. DEBBIE 
+            was designed to facilitate a more efficient access to the large literature in the field, generate 
+            a comprehensive map of research activity and findings, and enable evidence-based selection of materials for 
+            medical applications.
+    </p>
+    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of 
+            text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation 
+            pipeline (see illustration below), are openly available for download and use through the 
+            project’s <a href="https://github.com/ProjectDebbie/DEBBIE_pipeline"> GitHub repositories</a>.
+    </p>
+    <br>
+    <center><img class="w3-image w3-center" src="images/debbie_pipeline_overview.png" alt="Pipeline" width="900" height="450"></center>
+  </div>
 
-  
+<!-- End of overall container below -->
 </div>
-
-
 <!-- End page content -->
-
-
 <!-- Footer -->
-
+<!-- End body content -->
 </body>
 </html>
