--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a href="https://projectdebbie.github.io/#about" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">About</a>
       <a href="https://projectdebbie.github.io/#ontology" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Ontology</a>
       <a href="https://projectdebbie.github.io/#database" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Database</a>
-      <a href="#" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
+      <a href="https://projectdebbie.github.io/documentation.html" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
       <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research</a>
       <a href="https://projectdebbie.github.io/#team" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Team</a>
       <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contact</a>
