--- a/documentation.html
+++ b/documentation.html
@@ -9,13 +9,23 @@
           flex-wrap: wrap;
           display: flex;
           font-family: Tahoma, Geneva, sans-serif;
+          color: blue;
         }
         ul li {
-          flex: 1 0 33%;
+          flex: 1 0 50%;
           font-family: Tahoma, Geneva, sans-serif;
+          list-style: none;
+          text-decoration:none;
         }
         p {
           font-family: Tahoma, Geneva, sans-serif;
+        }
+        table, th, td {
+          border: 1px solid black;
+        }
+
+        th, td {
+          padding: 10px;
         }
 
 </style>
@@ -44,22 +54,133 @@
 
 <!-- Page content max-width:1564px -->
 <div class="w3-content w3-padding w3-white" style="max-width:1300px; min-width: 1300px;">
-  <!-- Pipeline overview Section -->
+  <!-- what is the debbie pipeline? Section -->
   <div class="w3-container w3-padding-16 w3-white" id="about" >
-    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE Pipeline Overview</h2>
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">What is the DEBBIE pipeline?</h2>
+    <p>Powered by software container technology (e.g. Docker) and a workflow manager (e.g. Nextflow), the DEBBIE pipeline <b>automatically and continuously</b> retrieves research abstracts, filters them according to relevancy, annotates them using selected terminologies and ontologies, and stores the information within a document-oriented database named the Database of Experimental Biomaterials and their Biological Effect (DEBBIE).
+    </p>
+    <br>
+    <center><img class="w3-image w3-center" src="images/debbie_pipeline_overview.png" alt="Pipeline" width="900" height="450"></center>
+  </div>
+    <!-- what are annotations Section -->
+  <div class="w3-container w3-padding-16 w3-white" id="about" >
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">What are annotations?</h2>
+    <p>Text annotation is a popular Natural Language Processing (NLP) technique that aims to extract relevant concepts hidden within large collections of textual data through computational approaches. For DEBBIE, annotations were performed using selected ontologies/terminologies and made use of the <a href="https://gate.ac.uk/">General Architecture of Text Engineering (GATE)</a> software and the <a href="https://stanfordnlp.github.io/CoreNLP/">Stanford Core Natural Language Processing (CoreNLP)</a> framework.
+    </p>
+    <br>
+    <center><img class="w3-image w3-center" src="images/annotation_example.png" alt="Pipeline" width="900" height="450"></center>  
+  </div>
+      <!-- quick start Section -->
+  <div class="w3-container w3-padding-16 w3-white" id="about" >
+    <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Quick Start</h2>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annoation Categories</h3>
+    <table class="w3-table w3-bordered w3-border w3-centered w3-striped">
+    <tr>
+      <th>Category</th>
+      <th>Definition</th>
+      <th>Examples</th>
+    </tr>
+    <tr>
+      <td>Biomaterial</td>
+      <td>A non-drug raw material or substance suitable for inclusion in systems which augment or replace the function of bodily tissues or organs</td>
+      <td><i>Polydioxanone, Polyglycolide, Hydroxyapatite</i></td>
+    </tr>
+    <tr>
+      <td>Manufactured Object</td>
+      <td>A physical object created by hand or machine</td>
+      <td><i>Experimental scaffold, Medical device, Surgical implant</i></td>
+    </tr>
+    <tr>
+      <td>Structure</td>
+      <td>The configuration, form or texture associated with a manufactured object or its components</td>
+      <td><i>Fiber, Gel, Mesh</i></td>
+    </tr>
+    <tr>
+      <td>Material Processing</td>
+      <td>A planned process which results in physical changes in a specified input material</td>
+      <td><i>Biofabrication, Coating, Knitting</i></td>
+    </tr>
+    <tr>
+      <td>Manufactured Object Features</td>
+      <td>Characteristics inherent or given during processing to a manufactured object or its components</td>
+      <td><i>Degradation features, Architectural organization, Shape</i></td>
+    </tr>
+    <tr>
+      <td>Medical Application</td>
+      <td>Intended use, function or outcome of the manufactured object</td>
+      <td><i>Artificial organs, Encapsulation, Tissue reconstruction</i></td>
+    </tr>
+    <tr>
+      <td>Associated Biological Process</td>
+      <td>A cellular or biological process that the manufactured object is designed to cause or support, or is measured to affect</td>
+      <td><i>Adipogenesis, Angiogenesis, Cell attachment</i></td>
+    </tr>
+    <tr>
+      <td>Effect on Biological System</td>
+      <td>The effect associated with manufactured object in a specific test system (cells, tissue or organism)</td>
+      <td><i>Biocompatibility, Cytocompatibility, Immunomodulatory</i></td>
+    </tr>
+    <tr>
+      <td>Adverse Effects</td>
+      <td>An unfavorable or unintended disease, sign, or symptom (including an abnormal laboratory finding) that is temporally associated with the use of a medical device or biomaterial</td>
+      <td><i>Adhesion Formation, Cytotoxicity, Inflammatory reaction</i></td>
+    </tr>
+     <tr>
+      <td>Biological Active Substance</td>
+      <td>Substance included in a manufactured object in order to impart a biological activity</td>
+      <td><i>Collagen, Heparin, Human Derived Matrix</i></td>
+    </tr>
+     <tr>
+      <td>Study Type</td>
+      <td>The study set up, such as in vitro, in vivo, or clinical</td>
+      <td><i>Clinical study, in vitro, in vivo</i></td>
+    </tr>
+    <tr>
+      <td>Tissue Type</td>
+      <td>A tissue or an organ mentioned in the study as the target or test system for the biomaterial object or medical device</td>
+      <td><i>Lung epithelium, Nerve plexus, Elastic cartilage tissue</i></td>
+    </tr>
+    <tr>
+      <td>Cell Type</td>
+      <td>The reported cell line or primary cell type</td>
+      <td><i>Fibroblast, Type II Pneumocyte, Osteocyte</i></td>
+    </tr>
+    <tr>
+      <td>Animal Model</td>
+      <td>The species and /or breed of animal used in the study</td>
+      <td><i>Human, Rabbit, Mouse</i></td>
+    </tr>
+    <tr>
+      <td>Research Technique</td>
+      <td>The reported laboratory technique used in an experimental study</td>
+      <td><i>Ultrasound biomicroscope, FLIM, Centrifuge</i></td>
+    </tr>
+    </table>
+    <br>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Ontology/Terminology Sources</h3>
+      <!-- list of superclasses -->
+      <ul class="list" style="padding-left: 150px;">
+        <!--row 1 -->
+          <li><a href="https://bioportal.bioontology.org/ontologies/MESH">Medical Subject Headings (UMLS)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/DEB">Devices, Experimental Scaffolds and Biomaterials Ontology (DEB)</a></li>
+          <li><a href="https://www.gmdnagency.org/">Global Medical Device Nomenclature (GMDN)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/CHEBI">Chemical Entities of Biological Interest (CHEBI)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/IOBC">Interlinking Ontology for Biological Concepts (IOBC)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/NCIT">National Cancer Institute Thesaurus (NCIT)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/NPO">NanoParticle Ontology (NPO)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/OBI">Ontology for Biomedical Investigations (OBI)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/ONTOTOXNUC">Ontology of Nuclear Toxicity (ONTOTOXNUC)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/UBERON">Uber Anatomy Ontology (UBERON)</a></li>
+          <li><a href="https://bioportal.bioontology.org/ontologies/PREMEDONTO">Precision Medicine Ontology (PREMEDONTO)</a></li>
+      </ul>
+    <br>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Citing DEBBIE</h3>
     <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database of 
             biomaterials, implants and medical devices automatically curated from the scientific literature. DEBBIE 
             was designed to facilitate a more efficient access to the large literature in the field, generate 
             a comprehensive map of research activity and findings, and enable evidence-based selection of materials for 
             medical applications.
     </p>
-    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of 
-            text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation 
-            pipeline (see illustration below), are openly available for download and use through the 
-            project’s <a href="https://github.com/ProjectDebbie/DEBBIE_pipeline"> GitHub repositories</a>.
-    </p>
-    <br>
-    <center><img class="w3-image w3-center" src="images/debbie_pipeline_overview.png" alt="Pipeline" width="900" height="450"></center>
   </div>
 
 <!-- End of overall container below -->
