updated carlas photo

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <p class="w3-opacity"></p>
     </div>
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
-      <img src="images/C Fuenteslopez (1).jpg" alt="carla" style="width:68%">
+      <img src="images/CFL_square.jpg" alt="carla" style="width:68%">
       <h3>Carla V. Fuenteslópez</h3>
       <p class="w3-opacity">Collaborator</p>
       <p>Carla is a DPhil Student studying Engineering Science at the University of Oxford</p>
