--- a/documentation.html
+++ b/documentation.html
@@ -155,8 +155,8 @@
       <td><i>Fibroblast, Type II Pneumocyte, Osteocyte</i></td>
     </tr>
     <tr>
-      <td>Animal Model</td>
-      <td>The species and /or breed of animal used in the study</td>
+      <td>Species</td>
+      <td>The species and /or breed used in the study</td>
       <td><i>Rat, Rabbit, Mouse</i></td>
     </tr>
     <tr>
