--- a/documentation.html
+++ b/documentation.html
@@ -115,8 +115,8 @@
       <td><i>Degradation features, Architectural organization, Shape</i></td>
     </tr>
     <tr>
-      <td>Medical Application</td>
-      <td>Intended use, function or outcome of the manufactured object</td>
+      <td>Medical Application, Disease or Condition </td>
+      <td>Intended use, context, function or outcome of the manufactured object</td>
       <td><i>Artificial organs, Encapsulation, Tissue reconstruction</i></td>
     </tr>
     <tr>
