--- a/documentation.html
+++ b/documentation.html
@@ -117,7 +117,7 @@
     <tr>
       <td>Medical Application, Disease or Condition </td>
       <td>Intended use, context, function or outcome of the manufactured object</td>
-      <td><i>Artificial organs, Encapsulation, Tissue reconstruction</i></td>
+      <td><i>Artificial organs, Encapsulation, Diabetes, Injury</i></td>
     </tr>
     <tr>
       <td>Associated Biological Process</td>
